add: changed applicaiton_parameters init process

--- a/app/application_parameters.json
+++ b/app/application_parameters.json
@@ -1,7 +1,7 @@
 {
 	"application" : {
 		"ui" : {
-			"logo_id" : {
+			"logo_media_id" : {
 				"parameter" : 1,
 				"type" : "integer",
 				"kind" : "gap",
