change: root identification

--- a/app/application_parameters.json
+++ b/app/application_parameters.json
@@ -1,5 +1,14 @@
 {
 	"application" : {
+		"system" : {
+			"root_user" : {
+				"parameter" : 1,
+				"type" : "uuid",
+				"kind" : "gap",
+				"default_value" : "",
+				"visibility" : "system"
+			}
+		},
 		"ui" : {
 			"logo_media_id" : {
 				"parameter" : 1,
