--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,27 @@
-# JWT Secret Key
-SECRET_KEY=
+# FastAPI Key
+SECRET_KEY=super_secret_key
+
+STATIC_MEDIA_FOLDER=./static
 
 # Database configuration
-DATABASE_HOST=
-DATABASE_PORT=
-DATABASE_USERNAME=
-DATABASE_PASSWORD=
-DATABASE_DBNAME=
+DATABASE_HOST=db
+DATABASE_PORT=5432
+DATABASE_USERNAME=postgres
+DATABASE_PASSWORD=postgres
+DATABASE_DBNAME=newhorizons
+
+# Security/CORS
+FRONTEND_URL=http://<HOSTOrIP>:5173
+SECURED=0
+DEV=1
+
+# Redis configuration
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_DB=1
+CACHE_THRESHOLD=20
+
+# Celery worker configuration
+CELERY_BROKER_URL=redis://redis:6379/0
+CELERY_BACKEND_URL=redis://redis:6379/0
+CELERY_TIMEZONE=UTC
